# khi_robot_py

./: README.md  example.py  khirolib.py  main.py  pyproject.toml  setup.py
as_programs/: endless.as  endless_move.as  large.as  test.as
config/: robot.py
khirolib/: __init__.py  irobot.py
programs/: get_position  posmon
src/: ActionQueue.py  AsyncTCPSockClient.py  IAction.py  RobotAction.py  action_queue.py  khi_exception.py  khi_robot_lib.py  khi_tcpip_lib.py  khi_telnet_lib.py  khilib_internal.py  robot_action.py  robot_exception.py  tcp_sock_client.py  telnet_client.py
utils/: pc_thread_state.py  rcp_state.py  robot_state.py  thread_state.py  time_limit.py
