[tool.poetry]
name = "khi-robot-py"
version = "0.1.0"
description = "Python library for Kawasaki Robotics"
authors = ["Igor Mushnikov <mi@lwms.ru>"]
readme = "README.md"
packages = [{include = "khirolib"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
